--- a/app/src/main/res/values-fr-rCA/strings.xml
+++ b/app/src/main/res/values-fr-rCA/strings.xml
@@ -2,5 +2,6 @@
 <resources>
     <string name="app_name">Sadia\'sAndroidLab</string>
     <string name="hello_message">Bonjour le monde!</string>
-    <string name="button_message">Je suis un bouton</string>
+    <string name="editmessage">Je suis un EditText</string>
+    <string name="hinttext">Écrivez quelque chose ici</string>
 </resources>
