--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Sadia\'sAndroidLab</string>
     <string name="hello_message">Hello world!</string>
-    <string name="button_message">I am a button</string>
+    <string name="editmessage">I\\\'m an EditText</string>
+    <string name="hinttext">Write something here</string>
+
 </resources>
