--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="editmessage">I\\\'m an EditText</string>
     <string name="hinttext">Write something here</string>
     <string name="button_message">I\\\'m a Button</string>
+    <string name="Button1">Button1</string>
+    <string name="Button2">Button2</string>
+    <string name="Button3">Button3</string>
+    <string name="spin_message">Spin flag</string>
 
 </resources>
