--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Sadia\'sAndroidLab</string>
     <string name="hello_message">Hello world!</string>
     <string name="button_message">I am a button</string>
+    <string name="type_something_here">Type something here:</string>
 </resources>
